2009-08-31  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/byte-run.el (define-obsolete-face-alias): New macro.

	* apropos.el (apropos-symbols-internal): Handle (obsolete) face aliases.

	* faces.el (describe-face): Adjust the output format to be more like
	describe-variable, and to mention (obsolete) face aliases.
	Adjust the whitespace so that help-setup-xref works.

	* calendar/calendar.el (calendar-today-face, diary-face, holiday-face):
	* calendar/diary-lib.el (diary-button-face):
	Mark these face aliases as obsolete.

	* calendar/calendar.el (calendar-today): Doc fix.

2009-08-31  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-control-all-threads)
	(gdb-control-current-thread): Force tool bar update.
	(gdb-non-stop-handler): New function.
	(gdb-init-1): Use it to test if non-stop mode is supported.
	Remove unused gdbmi buffer type.

2009-08-30  Kevin Rodgers  <kevin.d.rodgers@gmail.com>

	* progmodes/grep.el (grep-read-files): Strip trailing <N> from
	buffer names not visiting a file (e.g. cloned buffers).

2009-08-30  Nick Roberts  <nickrob@snap.net.nz>

	* comint.el (comint-exec-1): Check command is non-null first.
	Part of gdb-mi.el change (2009-08-28).

2009-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp-complete-symbol): Use minibuffer-complete.

2009-08-30  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (do-after-load-evaluation): Fix last change: use `mapc'
	instead of `dolist' to avoid a recursive require when bootstrapping.

2009-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (field-complete): Use minibuffer-complete.

	* net/ldap.el (ldap-search-internal): Use with-current-buffer and push.

	* net/imap.el (imap-send-command): Simplify.
	(imap-wait-for-tag): point-max - buffer-size.

	* net/ange-ftp.el (internal-ange-ftp-mode): Use define-derived-mode.

	* emacs-lisp/easy-mmode.el (define-minor-mode): Don't use symbol-value
	with constant argument.
